--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alexshepard
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: midzer/urban-theme
 plugins:
   - jekyll-feed
 
