add a url for config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Alex does a variety of things poorly - swift, data science, datavis, ML,
   drawing, AR, unity, etc, etc.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://alexshepard.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alexshepard
 
 # Build settings
