--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,15 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://alexshepard.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alexshepard
 
+paginate: 10
+paginate_path: page:num/
+
 # Build settings
 #theme: minima
 #remote_theme: midzer/urban-theme
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # deployment
 host: 0.0.0.0
